2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaproperty.vala, vala/valasemanticanalyzer.vala:
	  report error when declaring static properties

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: report error for binary
	  expressions with invalid operands, fixes bug 513708

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala, vala/valacfgbuilder.vala,
	  vala/valasemanticanalyzer.vala: fix crash when using general
	  catch clause, fixes bug 513680

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala, vala/valatrystatement.vala: add basic
	  support for exceptional control flow

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: fix typo in hex_digit

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodevariabledeclarator.vala,
	  gobject/valaccodegenerator.vala: 0-initialize temporary struct
	  variables to avoid passing uninitialized structs by reference,
	  fixes bug 513144

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix casts to delegate types

2008-02-01  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaarraytype.vala, vala/valadatatype.vala,
	  vala/valaintegertype.vala, vala/valanulltype.vala,
	  vala/valapointertype.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbolresolver.vala, vala/valaunresolvedtype.vala,
	  ccode/valaccodeassignment.vala, ccode/valaccodebinaryexpression.vala,
	  gobject/valaccodegenerator.vala: add more non-null warnings

2008-01-31  Jürg Billeter  <j@bitron.ch>

	* vapi/atk.vapi, vapi/gdk-pixbuf-2.0.vapi, vapi/gstreamer-0.10.vapi,
	  vapi/gstreamer-controller-0.10.vapi,
	  vapi/gstreamer-interfaces-0.10.vapi, vapi/gstreamer-rtsp-0.10.vapi,
	  vapi/gstreamer-video-0.10.vapi, vapi/gtk+-2.0.vapi,
	  vapi/poppler-glib.vapi: regenerated

2008-01-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnome-desktop-2.0/: update to gnome-desktop 2.21.90

	* vapi/gnome-desktop-2.0.vapi: regenerated
